<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/action_search"
		android:orderInCategory="100"
		android:title="@string/search"
		android:icon="@drawable/ic_search"
		app:showAsAction="always" />
	
	<item
		android:id="@+id/action_sort"
		android:orderInCategory="200"
		android:title="@string/sort"
		android:icon="@drawable/ic_sort"
		app:showAsAction="always" />
	
	<item
		android:id="@+id/action_profile"
		android:orderInCategory="300"
		android:title="@string/profile"
		app:showAsAction="never" />
	
	<item
		android:id="@+id/action_help"
		android:orderInCategory="400"
		android:title="@string/help"
		app:showAsAction="never" />
	
	<item
		android:id="@+id/action_about"
		android:orderInCategory="500"
		android:title="@string/about_us"
		app:showAsAction="never" />
</menu>
