<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="@dimen/padding_dialog"
	tools:context="io.healthe.ui.RegisterFragment">
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/username_float_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<android.support.design.widget.TextInputEditText
			android:id="@+id/username_edt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fontFamily="@font/abeezee"
			android:hint="@string/username"
			android:inputType="textCapWords|textPersonName" />
	
	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/email_float_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_normal">
		
		<android.support.design.widget.TextInputEditText
			android:id="@+id/email_edt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fontFamily="@font/abeezee"
			android:hint="@string/email_address"
			android:inputType="textEmailAddress" />
	
	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/password_float_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_normal">
		
		<android.support.design.widget.TextInputEditText
			android:id="@+id/password_edt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fontFamily="@font/abeezee"
			android:hint="@string/password"
			android:inputType="textPassword" />
	
	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_normal">
		
		<android.support.design.widget.TextInputEditText
			android:id="@+id/height_edt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fontFamily="@font/abeezee"
			android:hint="@string/height"
			android:inputType="numberDecimal" />
	
	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_normal">
		
		<android.support.design.widget.TextInputEditText
			android:id="@+id/weight_edt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fontFamily="@font/abeezee"
			android:hint="@string/weight"
			android:inputType="numberDecimal" />
	
	</android.support.design.widget.TextInputLayout>
	
	<Button
		android:id="@+id/pick_dob"
		style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:layout_marginTop="@dimen/spacing_normal"
		android:text="@string/set_date_of_birth"
		android:textColor="@color/text_primary_dark" />
	
	<Button
		android:id="@+id/get_started"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_gravity="end"
		android:layout_marginTop="@dimen/padding_normal"
		android:background="@drawable/auth_button_bg"
		android:padding="@dimen/spacing_normal"
		android:text="@string/get_started"
		android:textColor="@color/text_primary_light" />

</LinearLayout>
