<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="@dimen/padding_dialog"
	tools:context="io.healthe.ui.LoginFragment">
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/email_float_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true">
		
		<android.support.design.widget.TextInputEditText
			android:id="@+id/email_edt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fontFamily="@font/abeezee"
			android:hint="@string/email_address"
			android:inputType="textEmailAddress" />
	
	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/password_float_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/email_float_label"
		android:layout_marginTop="@dimen/spacing_normal">
		
		<android.support.design.widget.TextInputEditText
			android:id="@+id/password_edt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fontFamily="@font/abeezee"
			android:hint="@string/password"
			android:inputType="textPassword" />
	
	</android.support.design.widget.TextInputLayout>
	
	<Button
		android:id="@+id/login"
		android:layout_width="130dp"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_below="@id/password_float_label"
		android:layout_marginTop="@dimen/padding_normal"
		android:background="@drawable/auth_button_bg"
		android:padding="@dimen/spacing_micro"
		android:text="@string/login"
		android:textColor="@color/text_primary_light" />
	
	<com.google.android.gms.common.SignInButton
		android:id="@+id/google_auth"
		android:layout_width="140dp"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@id/password_float_label"
		android:layout_marginTop="@dimen/padding_normal"
		android:visibility="gone" />

</RelativeLayout>