<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:weightSum="3"
	tools:context="io.healthe.ui.AuthActivity">
	
	<RelativeLayout
		android:id="@+id/header_container"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:background="@color/background_dark">
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:fontFamily="@font/abeezee"
			android:padding="@dimen/padding_normal"
			android:text="@string/app_name"
			android:textAlignment="center"
			android:textColor="@color/text_primary_light"
			android:textSize="22sp" />
	
	</RelativeLayout>
	
	<RelativeLayout
		android:id="@+id/frame_container"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="2">
		
		<LinearLayout
			android:id="@+id/auth_actions_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="horizontal"
			android:paddingEnd="@dimen/padding_dialog"
			android:paddingStart="@dimen/padding_dialog"
			android:paddingTop="@dimen/spacing_normal">
			
			<TextView
				android:id="@+id/auth_action_register"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/padding_normal"
				android:clickable="true"
				android:focusable="true"
				android:fontFamily="@font/abeezee"
				android:padding="@dimen/padding_normal"
				android:text="@string/sign_up"
				android:textAlignment="center"
				android:textColor="@color/text_primary_dark"
				android:textSize="22sp"
				android:textStyle="bold" />
			
			<TextView
				android:id="@+id/auth_action_login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/padding_normal"
				android:clickable="true"
				android:focusable="true"
				android:fontFamily="@font/abeezee"
				android:padding="@dimen/padding_normal"
				android:text="@string/sign_in"
				android:textAlignment="center"
				android:textColor="@color/text_tertiary_dark"
				android:textSize="14sp"
				android:textStyle="bold" />
		
		</LinearLayout>
		
		<View
			android:id="@+id/separator"
			android:layout_width="200dp"
			android:layout_height="2dp"
			android:layout_below="@id/auth_actions_container"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="@dimen/spacing_micro"
			android:background="@color/black" />
		
		<FrameLayout
			android:id="@+id/auth_frame"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/separator"
			android:layout_marginTop="@dimen/spacing_normal" />
	
	</RelativeLayout>


</LinearLayout>
